# PathTracer

./: .gitignore  CMakeLists.txt  LICENSE  PathTracer.cpp  PathTracer.vcxproj  PathTracer.vcxproj.filters  README.md  TODO.md  cmake_build.bat  cmake_clean.bat  cmake_init.bat  cmake_run.bat  compile.bat  imgui.ini  spectrum.hpp
Scenes/: test.scene
Shaders/: PixelFrameBuffer.glsl  PixelShader.glsl  VertexShader.glsl
includes/glad/: CMakeLists.txt
includes/glad/include/glad/: glad.h
includes/glad/src/: glad.c
includes/glfw/: CMakeLists.txt
includes/glslang/: CMakeLists.txt  known_good.json
includes/imgui/: CMakeLists.txt  imgui_widgets.cpp
includes/imgui/backends/: CMakeLists.txt
includes/imgui/examples/example_glfw_opengl2/: main.cpp
scenes/: scene0.json  scene1.json  scene10.json  scene11.json  scene12.json  scene2.json  scene3.json  scene4.json  scene5.json  scene6.json  scene7.json  scene8.json  scene9.json  test.glsl
sdfs/: blob.glsl  mandelbulb.glsl  menger.glsl
src/: PathTracer.cpp  fragment.glsl  loader.cpp  loader.hpp  pathtracer.cpp  processor.glsl  shader.comp  shader.frag  vertex.glsl  vulkanapp.cpp
x64/Debug/: PathTracer.exe.recipe  Path_Tracing.exe.recipe  vc143.idb
x64/Debug/PathTracer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  PathTracer.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Debug/Path_Tracing.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Path_Tracing.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Release/: Path_Tracing.exe.recipe  Path_Tracing.ipdb
x64/Release/Path_Tracing.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Path_Tracing.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
